add virtual users
