# docs/api.yaml
@@ -124,7 +124,8 @@ paths:
       security:
         - JWT: []
       description: |
-        Endpoint for deleting a user. Only the user themselves can delete their account.
+        Endpoint for deleting a user.
+        Only the user themselves can delete their account.
       parameters:
         - in: path
           name: userId
@@ -149,7 +150,8 @@ paths:
       security:
         - JWT: []
       description: |
-        Endpoint for getting all invites for a user. Only the user themselves can get their invites.
+        Endpoint for getting all invites for a user.
+        Only the user themselves can get their invites.
       parameters:
         - in: path
           name: userId
@@ -180,7 +182,8 @@ paths:
       security:
         - JWT: []
       description: |
-        Endpoint for responding to an invite. Only the user themselves can respond to their invites.
+        Endpoint for responding to an invite.
+        Only the user themselves can respond to their invites.
       parameters:
         - in: path
           name: userId
@@ -220,7 +223,8 @@ paths:
       security:
         - JWT: []
       description: |
-        Endpoint for getting all users in an organization. Only users in the organization can get the users.
+        Endpoint for getting all users in an organization.
+        Only users in the organization can get the users.
       parameters:
         - in: path
           name: orgId
@@ -261,7 +265,8 @@ paths:
       security:
         - JWT: []
       description: |
-        Endpoint for updating an organization. Only admins of the organization can update the organization.
+        Endpoint for updating an organization.
+        Only admins of the organization can update the organization.
       parameters:
         - in: path
           name: orgId
@@ -294,7 +299,8 @@ paths:
       security:
         - JWT: []
       description: |
-        Endpoint for deleting an organization. Only admins of the organization can delete the organization.
+        Endpoint for deleting an organization.
+        Only admins of the organization can delete the organization.
       parameters:
         - in: path
           name: orgId
@@ -350,7 +356,8 @@ paths:
       security:
         - JWT: []
       description: |
-        Endpoint for inviting a user to an organization. Only admins of the organization can invite users.
+        Endpoint for inviting a user to an organization.
+        Only admins of the organization can invite users.
       parameters:
         - in: path
           name: orgId
@@ -387,7 +394,8 @@ paths:
       security:
         - JWT: []
       description: |
-        Endpoint for updating a user's role in an organization. Only admins of the organization can update roles.
+        Endpoint for updating a user's role in an organization.
+        Only admins of the organization can update roles.
       parameters:
         - in: path
           name: orgId
@@ -425,7 +433,8 @@ paths:
       security:
         - JWT: []
       description: |
-        Endpoint for removing a user from an organization. Only admins of the organization can remove users.
+        Endpoint for removing a user from an organization.
+        Only admins of the organization can remove users.
       parameters:
         - in: path
           name: orgId
@@ -447,6 +456,80 @@ paths:
         "500":
           description: "Internal Server Error"
 
+  /organization/{orgId}/user/virtual:
+    post:
+      operationId: AddVirtualUserToOrganization
+      tags:
+        - Organization endpoints
+      security:
+        - JWT: []
+      description: |
+        Endpoint for adding virtual users to an organization.
+        Only admins of the organization add virtual users.
+      parameters:
+        - in: path
+          name: orgId
+          required: true
+          schema:
+            type: integer
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                  example: "John Doe"
+      responses:
+        "200":
+          description: "Virtual user added"
+        "400":
+          description: "Bad Request"
+        "401":
+          description: "Unauthorized"
+        "500":
+          description: "Internal Server Error"
+
+  /organization/:orgId/user/:userId/virtual/:virtualUserId:
+    post:
+      operationId: TransferVirtualUserToUser
+      tags:
+        - Organization endpoints
+      security:
+        - JWT: []
+      description: |
+        Endpoint for transfering the rating & statistics of a virtual user to a real user.
+        The real users old rating & statistics will be deleted.
+        The virtual user will be deleted.
+        Only admins of the organization add virtual users.
+      parameters:
+        - in: path
+          name: orgId
+          required: true
+          schema:
+            type: integer
+        - in: path
+          name: userId
+          required: true
+          schema:
+            type: integer
+        - in: path
+          name: virtualUserId
+          required: true
+          schema:
+            type: integer
+      responses:
+        "200":
+          description: "Virtual user added"
+        "400":
+          description: "Bad Request"
+        "401":
+          description: "Unauthorized"
+        "500":
+          description: "Internal Server Error"
+
   /organization/{orgId}/match:
     post:
       operationId: CreateMatch
@@ -455,7 +538,8 @@ paths:
       security:
         - JWT: []
       description: |
-        Endpoint for creating a match. Only users in the organization can create matches.
+        Endpoint for creating a match.
+        Only users in the organization can create matches.
       parameters:
         - in: path
           name: orgId
@@ -506,7 +590,9 @@ paths:
       security:
         - JWT: []
       description: |
-        Endpoint for getting the top X players in an organization according to some measure. Also called a leaderboard. Only users in the organization can get the top X players.
+        Endpoint for getting the top X players in an organization according to some measure.
+        Also called a leaderboard.
+        Only users in the organization can get the top X players.
       parameters:
         - in: path
           name: orgId
